--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Map of Parks and Historic Sites</title>
+  <title>Mapa velkoobjemového odpadu v Praze 8</title>
     <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
   <![endif]-->
   <script src="//code.jquery.com/jquery-2.0.0.min.js"></script>
   <link href='//fonts.googleapis.com/css?family=Milonga' rel='stylesheet' type='text/css'>
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> <style type="text/css">
     body {
         padding: 0;
@@ -28,7 +29,7 @@
  
 </head>
 <body>
-  <h1 id="title">National Parks</h1>
+  <h1 id="title">Velkoobjemový odpad</h1>
   <div id="map"></div>
   <script src="//cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
   <script>
