--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     function getPins(e){
       bounds = map.getBounds();
-      url = "parks/within?lat1=" + bounds.getSouthWest().lat + "&lon1=" + bounds.getSouthWest().lng + "&lat2=" + bounds.getNorthEast().lat + "&lon2=" + bounds.getNorthEast().lng;
+      url = "container/within?lat1=" + bounds.getSouthWest().lat + "&lon1=" + bounds.getSouthWest().lng + "&lat2=" + bounds.getNorthEast().lat + "&lon2=" + bounds.getNorthEast().lng;
       $.get(url, pinTheMap, "json")
     }
 
@@ -79,7 +79,7 @@
     map.whenReady(getPins);
 
     $('#update').click(function() {
-      $.get('update', function(data) {
+      $.get('container/update', function(data) {
         console.log(data);
         getUnknownPlaces();
       });
