--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     }
 
     function getUnknownPlaces() {
-      $.get('places/unknown', processUnknownPlaces, 'json');
+      $.get('place/unknown', processUnknownPlaces, 'json');
     }
 
     function processUnknownPlaces(data) {
