Removed route for container within bounds specified
The route is not required because number of containers is relatively low and it does not make much sense to query server with every map change. All locations are stored in browser memory instead.

--- a/index.html
+++ b/index.html
@@ -249,9 +249,7 @@ var layerControl = L.control.layers(baseLayers, null, {
 var markerLayerGroup = L.layerGroup().addTo(map);
 
 function getPins(e){
-    bounds = map.getBounds();
-    url = "container/within?lat1=" + bounds.getSouthWest().lat + "&lon1=" + bounds.getSouthWest().lng + "&lat2=" + bounds.getNorthEast().lat + "&lon2=" + bounds.getNorthEast().lng;
-    $.get(url, pinTheMap, "json")
+    $.get("container", pinTheMap, "json")
 }
 
 function pinTheMap(data){
