--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="navbar-collapse collapse" id="navbar-collapse">
         <ul class="nav navbar-nav">
             <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#aboutModal').modal('show'); return false;"><i class="fa fa-question-circle" style="color: white"></i>&nbsp;&nbsp;About</a></li>
-            <li class="odpad-unknown-places"></li>
+            <li class="dropdown odpad-unknown-places"></li>
         </ul>
     </div><!--/.navbar-collapse -->
 </div>
