--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="navbar-collapse collapse" id="navbar-collapse">
         <ul class="nav navbar-nav">
             <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#aboutModal').modal('show'); return false;"><i class="fa fa-question-circle" style="color: white"></i>&nbsp;&nbsp;About</a></li>
-            <li class="dropdown odpad-unknown-places"></li>
+            <li class="dropdown container-unknown-places"></li>
         </ul>
     </div><!--/.navbar-collapse -->
 </div>
@@ -192,7 +192,7 @@
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
 <script type="text/javascript" src="js/leaflet-google.js"></script>
-<script type="text/javascript" src="js/odpad.js"></script>
+<script type="text/javascript" src="js/containers.js"></script>
 
 </body>
 </html>
