--- a/index.html
+++ b/index.html
@@ -126,20 +126,24 @@
 
 <body>
 <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Velkoobjemový odpad</a>
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Velkoobjemový odpad</a>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav container-filter">
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown container-unknown-places"></li>
+                <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#aboutModal').modal('show'); return false;"><i class="fa fa-question-circle" style="color: white"></i>&nbsp;&nbsp;O aplikaci</a></li>
+            </ul>
+        </div><!--/.navbar-collapse -->
     </div>
-    <div class="navbar-collapse collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav">
-            <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#aboutModal').modal('show'); return false;"><i class="fa fa-question-circle" style="color: white"></i>&nbsp;&nbsp;About</a></li>
-            <li class="dropdown container-unknown-places"></li>
-        </ul>
-    </div><!--/.navbar-collapse -->
 </div>
 
 <div id="map"></div>
@@ -156,7 +160,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Welcome to the BootLeaf template!</h4>
+                <h4 class="modal-title">O aplikaci</h4>
             </div>
 
             <div class="modal-body">
@@ -192,7 +196,8 @@
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js"></script>
 <script type="text/javascript" src="js/leaflet-google.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/moment.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/moment.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/lang/cs.js"></script>
 <script type="text/javascript" src="js/containers.js"></script>
 
 </body>
