Removed Time library and used Postgresql and Moment-timezone to work with time zones properly
This fixes #8 - last commit did not fix the issue so this is the second round.

--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
 <script type="text/javascript" src="js/leaflet-google.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/moment.min.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/lang/cs.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.0.3/moment-timezone.js"></script>
+<script type="text/javascript" src="js/moment-timezone-data.js"></script>
 <script type="text/javascript" src="js/containers.js"></script>
 
 </body>
