--- a/index.html
+++ b/index.html
@@ -206,18 +206,7 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js?2"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js"></script>
-<script type="text/javascript" src="js/leaflet-google.js"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/moment.min.js"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/lang/cs.js"></script>
-<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.0.3/moment-timezone.js"></script>
-<script type="text/javascript" src="js/moment-timezone-data.js"></script>
-<script type="text/javascript" src="js/containers.js"></script>
+<script type="text/javascript" data-main="js/containers" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.js"></script>
 
 </body>
 </html>
