Added link for bug reports

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <div class="tab-pane fade in" id="how">
                         <p>Hlavní použité technologie jsou Node.js, Bootstrap, Leaflet.js, Postgresql, OpenShift. Projekt je
                         zveřejněný pod volnou licencí na <a href="https://github.com/saxicek/odpad-praha8.cz">GitHubu</a>,
-                            uvítám pull requesty a bug reporty. :-) </p>
+                            uvítám pull requesty a <a href="https://github.com/saxicek/odpad-praha8.cz/issues/new" target="_blank">hlášení chyb</a>. :-) </p>
                     </div>
                 </div>
             </div>
