Added version info, improved About dialog styling

--- a/index.html
+++ b/index.html
@@ -173,22 +173,23 @@
                 </ul>
                 <div id="aboutTabsContent" class="tab-content" style="padding-top: 10px;">
                     <div class="tab-pane fade active in" id="what">
-                        <p>Mapa zobrazující kontejnery velkoobjemového odpadu v Praze 8 v daný den.</p>
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                Co všechno to umí?
-                            </div>
-                            <ul class="list-group">
-                                <li class="list-group-item">Zobrazit na mapě kontejnery pro daný den.</li>
-                                <li class="list-group-item">Umožňuje výběr mapového podkladu.</li>
-                                <li class="list-group-item">Nastavit umístění kontejneru pro místa, která aplikace nezná.</li>
-                                <li class="list-group-item">Upravit umístění kontejneru.</li>
-                                <li class="list-group-item">Funguje i na mobilních zařízeních.</li>
-                            </ul>
-                        </div>
+                        <p>Hlavním účelem aplikace je zobrazovat mapu kontejnerů velkoobjemového odpadu v Praze 8 v určitý den. Dále umožňuje tyto akce:</p>
+                        <table class="table">
+                            <tr><td>
+                                <ul>
+                                    <li>Výběr mapového podkladu.</li>
+                                    <li>Nastavit umístění kontejneru pro místa, která aplikace nezná.</li>
+                                    <li>Upravit umístění kontejneru.</li>
+                                </ul>
+                            </td></tr>
+                        </table>
+                        <h6 class="text-right"><small id="version"></small></h6>
                     </div>
                     <div class="tab-pane fade in" id="who">
-                        <p>Libor Nenadál <a href="mailto:libor.nenadal@gmail.com">&lt;libor.nenadal@gmail.com&gt;</a></p>
+                        <dl>
+                            <dt>Autor</dt>
+                            <dd>Libor Nenadál <a href="mailto:libor.nenadal@gmail.com">&lt;libor.nenadal@gmail.com&gt;</a></dd>
+                        </dl>
                     </div>
                     <div class="tab-pane fade in" id="why">
                         <p>Neznám Prahu 8 natolik dobře, abych si uměl vybrat ze seznamu zveřejňovaném na
