Added Bower for client JS dependency management and r.js for minification
 This fixes #12 and #13. OpenShift deploy hook runs automatically `bower install` and r.js.

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<script type="text/javascript" data-main="js/containers" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.js"></script>
+<script type="text/javascript" src="js/containers.js"></script>
 
 </body>
 </html>
