--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 </ul>
                             </td></tr>
                         </table>
-                        <h6 class="text-right"><small id="version"></small></h6>
+                        <h6 class="text-right"><small>Verze: {{=it.version}}</small></h6>
                     </div>
                     <div class="tab-pane fade in" id="who">
                         <dl>
