Added different marker icon for every supported container types
Fixes #17

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css" rel="stylesheet" type="text/css">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.0/leaflet.awesome-markers.css" rel="stylesheet" type="text/css">
     <link href="css/containers.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
