--- a/static/test/run.html
+++ b/static/test/run.html
@@ -2,10 +2,10 @@
 <head>
     <meta charset="utf-8"/>
     <title>Odpad Praha 8 - Client Tests</title>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/mocha/1.13.0/mocha.min.css"/>
+    <link rel="stylesheet" href="css/mocha.css"/>
 </head>
 <body>
 <div id="mocha"></div>
-<script data-main="js/SpecRunner.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<script type="text/javascript" src="js/runner.js"></script>
 </body>
 </html>
